# Document-Cropper-OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/docscanner/: __init__.py  cli.py  core.py  utils.py
tests/: test_core.py
web_demo/: app.py
web_demo/static/: script.js  styles.css
web_demo/templates/: index.html
